--- a/prj01/stylesheet.css
+++ b/prj01/stylesheet.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@1,600&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@1,400,500,600&display=swap'); */
 
 *{
     margin: 0;
@@ -35,6 +35,8 @@ body{
 }
 
 h1{
+    color: black;
+    /* text-transform: uppercase; */
     text-align: center;
 }
 
@@ -65,7 +67,7 @@ small{
 
 .form-input input:focus{
     outline: 0;
-    border-color: grey;
+    border:3px solid grey;
 }
 
 .form-input.success input{
@@ -84,12 +86,17 @@ small{
 button{
     background-color: rgba(33, 126, 156, 0.788);
     text-align: center;
+    font-size: 1.2rem;
+    letter-spacing: 2px;
+    text-transform: uppercase;
     outline: 0;
     border-radius: 10px;
     color: white;
     padding: 4px;
     margin-bottom: 5px;
     cursor: pointer;
+    border: 2px solid lightblue;
+    box-shadow: 3px 0 10px rgba(0, 0, 0, 0.5) ;
 }
 
 a{
@@ -102,4 +109,14 @@ a{
     border-color: none;
     outline: none;
     width: 100%;
+    border: 2px solid lightblue;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    box-shadow: 3px 0 10px rgba(0, 0, 0, 0.5);
+}
+
+.submit:active{
+    display: block;
+    transform: translateY(3px);
+    transition: all 0.8s;   
 }
