--- a/prj01/stylesheet.css
+++ b/prj01/stylesheet.css
@@ -23,15 +23,15 @@ body{
 }
 
 .form{
-    width: 500px;
+    width: 400px;
     color: grey;
     height: auto;
-    font-size: 16px;
+    font-size: 13px;
     background:white;
     box-shadow: 2px 4px 10px black;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
-    padding: 50px;
+    padding: 50px 50px 30px 50px;
 }
 
 h1{
@@ -41,7 +41,8 @@ h1{
 }
 
 .form-input{
-    margin:10px 0;
+    margin-bottom: 1.5rem;
+    position: relative;
     display: block;
 }
 
@@ -52,15 +53,19 @@ label,input,small,button{
 }
 
 input{
-    padding: 5px 20px;
+    padding: 4px 18px;
     outline: none;
-    font-size: 1rem;
+    font-size: 0.8rem;
     border-radius: 5px;
     border:2px solid lightslategrey;
 
 }
 
 small{
+    position: absolute;
+    top: 65px;
+    bottom: 0;
+    left: 0;
     margin-top: 2px;
     visibility: hidden;
 }
@@ -113,6 +118,10 @@ a{
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
     box-shadow: 3px 0 10px rgba(0, 0, 0, 0.5);
+}
+
+.submit{
+    margin: 2rem 0;
 }
 
 .submit:active{
