--- a/prj02/style.css
+++ b/prj02/style.css
@@ -96,7 +96,7 @@ label{
 
 .row {
     display: flex;
-    margin-left:5rem;
+    margin-left:3rem;
 }
 
 
@@ -106,9 +106,10 @@ label{
     border: 1px solid rgb(71, 69, 69);
 }
 
-.row:nth-of-type(2){
-    margin-right: 1rem;
+.row .seat:nth-of-type(3),.row .seat:nth-last-of-type(4){
+    margin-right: 2rem;
 }
+
 p{
     font-size: 1.5rem;
     margin: 2rem 0;
