--- a/prj02/style.css
+++ b/prj02/style.css
@@ -60,6 +60,7 @@ select:focus{
 }
 
 .seat{
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.733);
     background-color: slategray;
     border: 1px solid transparent;
     padding: 0.8rem;
@@ -86,7 +87,7 @@ label{
     background-color: white;
 }
 
-.seat.selected{
+.selected{
     background-color: aqua;
 }
 
