--- a/prj05/style.css
+++ b/prj05/style.css
@@ -1,4 +1,4 @@
-*{
+    *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -79,9 +79,18 @@ h2{
     color: rgb(56, 55, 55);
 }
 
-.main{
+main{
     width: 50%;
     padding: 0.5rem 2rem;
+}
+
+.name{  
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+    font-size: 1.2rem;
+    color:black;
 }
 
 h3{
