--- a/prj08/style.css
+++ b/prj08/style.css
@@ -10,15 +10,16 @@ a{
     color: black;
 }
 
+
 body{
     position: relative;
     font-size: 62.5%;
     font-family: sans-serif;
     display: flex;
     justify-content: center;
-
+    width: 100%;
+    min-height: 100vh;
     line-height: 1.9;
-    height: 100vh;
     background: linear-gradient(rgba(173, 57, 57, 0.904), rgba(238, 177, 64, 0.836) 200px 30%, rgba(221, 221, 52, 0.808) 50% 70%, rgba(47, 206, 47, 0.705) 90%)no-repeat center/cover;
     padding: 3rem 0 0 0;
 }
@@ -27,21 +28,41 @@ body{
     max-width: 1000px;
     width: 100%;
     margin: 0 auto;
-    text-align: center;
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
-
 }
 
 
 h1{
+    text-align: center;
     font-weight: 900;
     font-size: 2rem;
     letter-spacing: 2px;
     margin-bottom: 0.5rem;
     animation: zoom 3s infinite ease;
     color: rgb(65, 28, 7);
+    transition: all 0.8 ease-in-out;
+
+}
+h2{
+    text-align: center;
+    font-weight: 900;
+    font-size: 1.5rem;
+    letter-spacing: 2px;
+    margin: 1rem 0;
+    animation: slider 3s  ease;
+    color: rgb(255, 254, 254);
+    transition: all 0.8 ease-in-out;
+
+}
+h3{
+    width: 100%;
+    text-align: center;
+    font-weight: 900;
+    font-size: 1rem;
+    letter-spacing: 2px;
+    margin: 1rem 0;
+    color: rgb(255, 255, 255);
     transition: all 0.8 ease-in-out;
 
 }
@@ -72,7 +93,7 @@ h1{
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
-   
+
 }
 
 input, button[type="submit"]{
@@ -85,7 +106,7 @@ input, button[type="submit"]{
 .form input{
     border-radius: 10px 0 0 10px;
     width: 35%;
-    
+
 }
 
 .form button[type="button"]:active,.form button[type="submit"]:active{
@@ -110,6 +131,127 @@ input, button[type="submit"]{
     cursor: pointer;
 }
 
+.foodcategorytitle p{
+    text-align: center;
+    font-weight: 600;
+    font-size: 1rem;
+    letter-spacing: 2px;
+    margin: 1rem 0;
+    animation: slider 3s  ease;
+    color: rgb(65, 28, 7);
+    transition: all 0.8 ease-in-out;
+}
+
+.foodgallery{
+    padding: 1rem;
+    position: relative;
+    width: 100%;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    grid-gap: 30px;
+    margin-top: 30px;
+
+}
+
+.meals{
+    position: relative;
+    transition: all .7s ease;
+    cursor: pointer;
+}
+
+.meals img{
+    width: 100%;
+    height: 100%;
+    border: 4px solid white;
+    border-radius: 2px;
+    border-radius: 10px;
+    cursor: pointer;
+
+}
+
+.meal-info {
+    border-radius: 10px;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    padding: 0.5rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    background: rgba(0,0,0,0.7);
+    text-transform: uppercase;
+    transition: all .7s ease;
+    mix-blend-mode:luminosity;
+    
+}
+
+.meals:hover{
+    transform: scale(1.1);
+    border: 3px solid greys;
+}
+
+.meals:hover .meal-info{
+    opacity: 1;
+}
+
+.ingredient-list{
+    font-size: 1.2rem;
+    font-weight: 600;
+}
+
+.selected-meal{
+    margin: 1rem 0;
+    display: flex;
+    flex-direction:row;
+}
+
+.selected-food-img{
+    width: 60%;
+    padding:0 2rem 2rem 2rem;
+    text-align: center;
+}
+
+.food-ingredient-conatiner{
+    width: 40%;
+}
+
+.ingredient-list{
+    display: flex;
+    flex-direction:row ;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    font-size: 1rem;
+}
+
+.food-information{
+    display: flex;
+    text-align: center;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.info{
+    font-size: 1rem;
+
+}
+
+.ingredient-list li{
+    width: 40%;
+}
+
+
+.selected-food-img img{
+    width: 70%;
+    margin-top:1rem ;
+    border-radius: 10px;
+    animation: zoom 3s infinite ease-in-out;
+    transition: all 1s ease-in-out;
+    
+}
 
 @keyframes zoom {
     10%{
@@ -123,3 +265,61 @@ input, button[type="submit"]{
     }
 }
 
+@keyframes slider {
+    0%{
+        opacity: 0;
+    }
+    10%{
+        transform: translateX(-300px);
+        opacity: 0;
+    }
+    50%{
+        opacity: 5;
+    }
+    80%{
+        transform:translateX(+60px);
+        opacity: 9;
+    }
+}
+@media(max-width:1000px){
+    body{
+        margin: 0;
+    }
+    .foodgallery{
+        grid-template-columns: repeat(3,1fr);
+    }   
+}
+
+
+@media(max-width:800px){
+    body{
+        padding: 1rem;
+        margin: 0;
+    }
+    h1,h2,span,li,p{
+        font-size: 0.6rem;
+    }
+    .foodgallery{
+        grid-template-columns: repeat(3,1fr);
+    }   
+}
+
+@media(max-width:600px){
+    body{
+        margin: 0;
+    }
+    .foodgallery{
+        grid-template-columns: repeat(2,1fr);
+    }   
+}
+
+@media(max-width:200px){
+    body{
+        margin: 0;
+    }
+    .foodgallery{
+        grid-template-columns: repeat(1fr);
+    }   
+
+
+}
