--- a/prj02/style.css
+++ b/prj02/style.css
@@ -5,6 +5,8 @@
 }
 
 body{
+
+    position: relative;
     font-size: 63%;
     padding: 20px;
     min-height: 100vh;
@@ -16,7 +18,40 @@ body{
     color: white;
     background:linear-gradient(to top, rgba(255, 255, 255, 0.39) ,rgba(77, 245, 43, 0.5)50%) ,url(./nat-1-large.jpg)no-repeat center/cover;   
 }
-
+.author{
+    position: absolute;
+    right: 40px;
+    top: 40px;
+    font-weight: 600;
+    font-size: 0.8rem;
+    color: white;
+}
+a{
+    color: white;
+    text-decoration: none;
+    cursor: pointer;
+}
+.home{
+    position: absolute;
+    cursor: pointer;
+    box-shadow: 2px 2px 10px rgba(250, 240, 230, 0.788);
+    top: 40px;
+    left: 40px;
+    border-radius: 5px;
+    padding: 8px 10px;
+    border: none;
+    font-weight: 600;
+    text-transform: uppercase;
+    letter-spacing: 1.5px;
+    border:2px solid burlywood;
+    color: white;
+    background-color:lightseagreen;     
+    width: auto;
+    display: inline-block;
+}
+.home:active{
+    transform: translateY(-3px);
+}
 .clear-fix::after{
     content: '';
     clear: both;
