--- a/prj08/style.css
+++ b/prj08/style.css
@@ -169,6 +169,25 @@ input, button[type="submit"]{
     cursor: pointer;
 
 }
+.random{
+    border-radius: 10px;
+    position: relative;
+    display: inline-block;
+    display: flex;
+    justify-content: center;
+    margin: 0 auto;
+    width: 400px;
+    height: 400px;
+}
+
+.random img{
+    width: 100%;
+    height: 100%;
+    border: 4px solid white;
+    border-radius: 2px;
+    border-radius: 10px;
+    cursor: pointer;
+}
 
 .meal-info {
     border-radius: 10px;
@@ -194,7 +213,16 @@ input, button[type="submit"]{
     border: 3px solid greys;
 }
 
+.random:hover{
+    transform: scale(1.1);
+    border: 3px solid greys;
+}
+
 .meals:hover .meal-info{
+    opacity: 1;
+}
+
+.random:hover .meal-info{
     opacity: 1;
 }
 
