--- a/root.css
+++ b/root.css
@@ -13,6 +13,14 @@ body{
     font-family: 'Open Sans', sans-serif;
 }
 
+h1{
+    font-size: 2rem;
+    letter-spacing: 2px;
+    font-weight: 800;
+    margin-left: 1rem;
+    text-decoration: underline;
+}
+
 ol{
     list-style-type: style 2rem;
     font-size: 1.5rem;
