--- a/prj10/style.css
+++ b/prj10/style.css
@@ -13,7 +13,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 3rem 0;
+  padding: 3rem 0 0 0;
   font-size: 62.5%;
 }
 
@@ -42,7 +42,8 @@ body {
 .home a {
   text-decoration: none;
   cursor: pointer;
-  color: white;
+  color: rgb(39, 38, 38);
+  
 }
 
 .home:active,
@@ -167,14 +168,19 @@ a:active {
   flex-direction: row;
   justify-content: space-around;
 }
-section{
+
+.showlist a{
+  color: black;
+}
+
+.list,section h1{
   display: none;
 }
 .songs-list-container {
  
   width: 60%;
   height: auto;
-  margin-top: 15rem;
+  margin-top: 6rem;
   padding: 2rem;
   display: flex;
   flex-direction: column;
@@ -245,7 +251,7 @@ section{
   margin-bottom: 10px;
 }
 .progress-bar-container {
-  width: 99%;
+  width: 100%;
   height: 10px;
   border-radius: 10px;
   border: 2px solid rgb(59, 58, 58);
